Fixed spacing on intro page

--- a/styles/site.css
+++ b/styles/site.css
@@ -88,6 +88,7 @@ hr {
 
 .intro h1,
 h2 {
+    margin-bottom: 0;
     line-height: 1;
 }
 
